--- a/for-parents/transparent-progress-updates.mdx
+++ b/for-parents/transparent-progress-updates.mdx
@@ -1,15 +1,15 @@
 ---
 title: "Transparent Progress Updates"
-description: "Clear, concise, and actionable updates on your child's progress."
-icon: "message-square-quote"
+description: "The MindLab EDU platform provides clear, concise, and actionable updates on your child's progress."
 ---
 
 The MindLab EDU platform is designed to replace vague, infrequent progress reports with clear, concise, and actionable updates that are available to you on demand.
 
-### Your Personal AI Agent
+## Your Personal AI Agent
 
 Your personal AI agent is your single point of contact for understanding your child's academic journey. You can ask it questions in plain English, and it will provide you with a natural-language summary that is grounded in your child's actual performance data.
 
+<Info>
 **For example, you could ask:**
 
 > "How is my child doing in science?"
@@ -17,13 +17,28 @@ Your personal AI agent is your single point of contact for understanding your ch
 **And your agent might respond:**
 
 > "She’s improving in fractions but still missing word problems; I recommend 15 minutes of practice this weekend."
+</Info>
 
-### A Partnership in Parenting
+## A Partnership in Parenting
 
-This is more than just a report; it is a partnership. Your AI agent is a powerful tool that can help you to:
+<Note>
+This is more than just a report; it is a partnership.
+</Note>
 
--   **Stay Informed:** Get a clear, up-to-date picture of your child's progress.
--   **Support Learning at Home:** Get simple, actionable suggestions for how you can help.
--   **Have More Productive Conversations:** Go into parent-teacher meetings with a clear understanding of the key issues.
+Your AI agent is a powerful tool that can help you to:
 
+<CardGroup cols={3}>
+  <Card title="Stay Informed" icon="info">
+    Get a clear, up-to-date picture of your child's progress.
+  </Card>
+  <Card title="Support Learning at Home" icon="home">
+    Get simple, actionable suggestions for how you can help.
+  </Card>
+  <Card title="Have More Productive Conversations" icon="users">
+    Go into parent-teacher meetings with a clear understanding of the key issues.
+  </Card>
+</CardGroup>
+
+<Tip>
 This is the future of parent engagement: a powerful partnership between home and school, powered by artificial intelligence.
+</Tip>
