--- a/for-school-leaders/admin-insight-dashboard.mdx
+++ b/for-school-leaders/admin-insight-dashboard.mdx
@@ -1,12 +1,11 @@
 ---
 title: "The Admin Insight Dashboard"
-description: "Real-time visibility into the health of your institution."
-icon: "chart-line"
+description: "The Admin Insight Dashboard provides real-time visibility into the health of your institution."
 ---
 
 The Admin Insight Dashboard is your single source of truth for the health and performance of your institution. It provides real-time, trustworthy roll-ups of your most critical data, allowing you to move from reactive firefighting to proactive, data-driven leadership.
 
-### Key Dashboards
+## Key Dashboards
 
 The Admin Insight Dashboard is a modular system that provides a comprehensive view of your institution.
 
@@ -25,8 +24,12 @@ The Admin Insight Dashboard is a modular system that provides a comprehensive vi
   </Card>
 </CardGroup>
 
-### Early Warning & Alerts
+## Early Warning & Alerts
 
+<Info>
 The dashboard also includes a powerful early warning system. Your personal AI agent will continuously monitor the data for patterns that suggest a student is at risk, and it will proactively alert you with a summary of the issue and a set of recommended next steps.
+</Info>
 
+<Tip>
 This is the power of a true intelligence layer. It doesn't just show you data; it provides you with the actionable insights you need to make better decisions.
+</Tip>
