--- a/for-school-leaders/program-and-curriculum-evaluation.mdx
+++ b/for-school-leaders/program-and-curriculum-evaluation.mdx
@@ -1,25 +1,44 @@
 ---
 title: "Program & Curriculum Evaluation"
-description: "Turning school-wide learning data into strategic decisions."
-icon: "magnifying-glass-chart"
+description: "The MindLab EDU platform provides the aggregated, longitudinal data you need to make strategic decisions about your programs and curriculum."
 ---
 
 The MindLab EDU platform does more than just provide real-time visibility into the day-to-day operations of your institution. It also provides the aggregated, longitudinal data you need to make strategic decisions about your programs and curriculum.
 
-### From Data to Decisions
+## From Data to Decisions
 
 Because all of your school's content and activity is centralized in MindLab, we can provide you with a unique, high-level view of what's working and what's not.
 
--   **Curriculum Effectiveness:** Identify which parts of your curriculum are underperforming and which are delivering the best results.
--   **Intervention Impact:** Understand which interventions are actually moving the needle for your students.
--   **Teacher Performance:** Get a clear, data-driven view of teacher effectiveness, normalized for student baseline variance.
+<AccordionGroup>
+  <Accordion title="Curriculum Effectiveness">
+    Identify which parts of your curriculum are underperforming and which are delivering the best results.
+  </Accordion>
+  <Accordion title="Intervention Impact">
+    Understand which interventions are actually moving the needle for your students.
+  </Accordion>
+  <Accordion title="Teacher Performance">
+    Get a clear, data-driven view of teacher effectiveness, normalized for student baseline variance.
+  </Accordion>
+</AccordionGroup>
 
-### A Strategic Partnership
+## A Strategic Partnership
 
-This is more than just a dashboard; it is a strategic partnership. Our team will work with you to:
+<Note>
+This is more than just a dashboard; it is a strategic partnership.
+</Note>
 
-1.  **Define Your Goals:** We will help you define the key metrics and outcomes that matter most to your institution.
-2.  **Configure Your Dashboards:** We will configure your dashboards to provide you with the specific, actionable insights you need to achieve those goals.
-3.  **Iterate & Improve:** We will work with you on an ongoing basis to analyze the data, refine your strategies, and continuously improve the performance of your institution.
+<Steps>
+  <Step title="Define Your Goals">
+    We will help you define the key metrics and outcomes that matter most to your institution.
+  </Step>
+  <Step title="Configure Your Dashboards">
+    We will configure your dashboards to provide you with the specific, actionable insights you need to achieve those goals.
+  </Step>
+  <Step title="Iterate & Improve">
+    We will work with you on an ongoing basis to analyze the data, refine your strategies, and continuously improve the performance of your institution.
+  </Step>
+</Steps>
 
+<Tip>
 This is the ultimate goal of the MindLab EDU platform: to empower you with the data and insights you need to build a truly world-class educational institution.
+</Tip>
