--- a/for-students/the-student-portal.mdx
+++ b/for-students/the-student-portal.mdx
@@ -1,16 +1,15 @@
 ---
 title: "The Student Portal"
-description: "Your personal co-pilot for learning and growth."
-icon: "user-graduate"
+description: "The Student Portal is your personal co-pilot for learning and growth."
 ---
 
 The Student Portal is your personal space for managing your learning journey. It is designed to help you stay organized, understand your progress, and get the support you need to succeed.
 
-### Your Personal AI Agent
+## Your Personal AI Agent
 
 When you log in to the Student Portal, you will be greeted by your personal AI agent. This is your dedicated tutor, coach, and study partner. It is a powerful tool that is designed to help you achieve your academic goals.
 
-### Key Features of the Student Portal
+## Key Features of the Student Portal
 
 <CardGroup cols={2}>
   <Card title="Personalized Tutoring" icon="shapes">
