--- a/for-teachers/prep-and-planning.mdx
+++ b/for-teachers/prep-and-planning.mdx
@@ -1,25 +1,46 @@
 ---
 title: "Prep & Planning"
-description: "Using AI-powered insights for differentiated instruction."
-icon: "clipboard-list-check"
+description: "The MindLab EDU platform is a powerful tool for differentiated instruction, providing the real-time, actionable insights you need to tailor your lessons to the specific needs of your students."
 ---
 
 The MindLab EDU platform is a powerful tool for differentiated instruction. It provides you with the real-time, actionable insights you need to tailor your lessons to the specific needs of your students.
 
-### From Data to Action
+## From Data to Action
 
 Your personal AI agent is constantly analyzing the performance data from your class. It will surface clusters of weakness and recommend specific, targeted interventions.
 
--   **Pacing Adjustments:** Get recommendations on when to speed up and when to slow down, based on the real-time comprehension of your students.
--   **Student Groupings:** Your agent will suggest intelligent student groupings for collaborative work, based on their individual strengths and weaknesses.
--   **Supplemental Resources:** Get recommendations for supplemental resources and activities that are perfectly tailored to the needs of individual students or small groups.
+<AccordionGroup>
+  <Accordion title="Pacing Adjustments">
+    Get recommendations on when to speed up and when to slow down, based on the real-time comprehension of your students.
+  </Accordion>
+  <Accordion title="Student Groupings">
+    Your agent will suggest intelligent student groupings for collaborative work, based on their individual strengths and weaknesses.
+  </Accordion>
+  <Accordion title="Supplemental Resources">
+    Get recommendations for supplemental resources and activities that are perfectly tailored to the needs of individual students or small groups.
+  </Accordion>
+</AccordionGroup>
 
-### A Partnership in Pedagogy
+## A Partnership in Pedagogy
 
-This is not about replacing your professional judgment; it is about augmenting it. Your AI agent is a powerful partner that can help you to:
+<Note>
+This is not about replacing your professional judgment; it is about augmenting it.
+</Note>
 
--   **Save Time:** Spend less time on manual data analysis and more time on high-impact teaching.
--   **Intervene Early:** Catch small issues before they become big ones.
--   **Deliver Personalized Instruction:** Ensure that every student is getting the specific support they need to succeed.
+Your AI agent is a powerful partner that can help you to:
 
+<CardGroup cols={3}>
+  <Card title="Save Time" icon="clock">
+    Spend less time on manual data analysis and more time on high-impact teaching.
+  </Card>
+  <Card title="Intervene Early" icon="siren">
+    Catch small issues before they become big ones.
+  </Card>
+  <Card title="Deliver Personalized Instruction" icon="user-pen">
+    Ensure that every student is getting the specific support they need to succeed.
+  </Card>
+</CardGroup>
+
+<Tip>
 This is the future of teaching: a powerful partnership between human expertise and artificial intelligence.
+</Tip>
