--- a/for-teachers/the-teacher-workspace.mdx
+++ b/for-teachers/the-teacher-workspace.mdx
@@ -1,12 +1,11 @@
 ---
 title: "The Teacher Workspace"
-description: "Your AI-assisted co-pilot for planning, grading, and communication."
-icon: "user-pen"
+description: "The Teacher Workspace is your AI-assisted co-pilot for planning, grading, and communication."
 ---
 
 The Teacher Workspace is your central hub for managing your courses, content, and students. It is an AI-assisted environment designed to save you hours of administrative work, allowing you to focus on what you do best: teaching.
 
-### Core Workspace Features
+## Core Workspace Features
 
 The Teacher Workspace is a modular system that provides a comprehensive suite of tools to support your daily workflows.
 
