--- a/mindlab-edu/the-learning-continuity-system.mdx
+++ b/mindlab-edu/the-learning-continuity-system.mdx
@@ -1,25 +1,44 @@
 ---
 title: "The Learning Continuity System"
-description: "The modern operating layer for schools."
-icon: "school"
+description: "MindLab EDU is the modern operating layer for schools, providing a single source of truth for leaders, teachers, parents, and students."
 ---
 
 MindLab EDU is the modern operating layer for schools: one place that gives leaders clear visibility, saves teachers time, and keeps parents engaged—while quietly building the data foundation to expand into a full school ERP over time.
 
-### The Problem We Solve
+## The Problem We Solve
 
--   **Leaders** lack timely, trustworthy roll-ups of critical data.
--   **Teachers** juggle a dozen different tools, and content lives in disconnected silos.
--   **Parents** want clarity, but schools cannot scale one-to-one updates.
+<CardGroup cols={3}>
+  <Card title="For Leaders" icon="user-tie">
+    You lack timely, trustworthy roll-ups of critical data.
+  </Card>
+  <Card title="For Teachers" icon="user-pen">
+    You juggle a dozen different tools, and content lives in disconnected silos.
+  </Card>
+  <Card title="For Parents" icon="family">
+    You want clarity, but schools cannot scale one-to-one updates.
+  </Card>
+</CardGroup>
 
+<Note>
 Existing ERPs are heavy and expensive. Point AI tools are not sticky. MindLab EDU is the solution.
+</Note>
 
-### Our Wedge: High-Impact, Low-Friction
+## Our Wedge: High-Impact, Low-Friction
 
 We start with a tight wedge of three high-impact, low-friction modules that deliver immediate value:
 
-1.  **Admin Insight:** Real-time dashboards for enrollment, attendance, and at-risk students.
-2.  **Teacher Workspace:** An AI-assisted workspace to generate materials, auto-grade, and send summaries.
-3.  **Parent View:** A secure portal for attendance, grades, and messages.
+<Steps>
+  <Step title="Admin Insight">
+    Real-time dashboards for enrollment, attendance, and at-risk students.
+  </Step>
+  <Step title="Teacher Workspace">
+    An AI-assisted workspace to generate materials, auto-grade, and send summaries.
+  </Step>
+  <Step title="Parent View">
+    A secure portal for attendance, grades, and messages.
+  </Step>
+</Steps>
 
+<Tip>
 This wedge creates immediate value and centralizes the school’s content and activity in MindLab, forming a data moat for our expansion into a full, modular school ERP.
+</Tip>
