--- a/security/ferpa-and-hipaa-compliance.mdx
+++ b/security/ferpa-and-hipaa-compliance.mdx
@@ -1,25 +1,42 @@
 ---
 title: "FERPA & HIPAA Compliance"
-description: "A detailed explanation of our compliance with key regulations."
-icon: "shield-lock"
+description: "The MindLab platform has been architected from the ground up to meet the stringent security and privacy standards of both FERPA and HIPAA."
 ---
 
 We understand that our customers in the education and healthcare sectors are subject to a unique set of regulatory requirements. The MindLab platform has been architected from the ground up to meet the stringent security and privacy standards of both FERPA and HIPAA.
 
-### FERPA
+## FERPA
 
 The Family Educational Rights and Privacy Act (FERPA) is a federal law that protects the privacy of student education records. The MindLab EDU platform is fully FERPA compliant.
 
--   **Data Ownership:** Your institution retains full ownership of all student data.
--   **Access Control:** Our granular Role-Based Access Control (RBAC) system ensures that only authorized users have access to student records.
--   **Auditability:** Every action taken on the platform is recorded in a tamper-evident log, providing a complete and immutable audit trail.
+<AccordionGroup>
+  <Accordion title="Data Ownership">
+    Your institution retains full ownership of all student data.
+  </Accordion>
+  <Accordion title="Access Control">
+    Our granular Role-Based Access Control (RBAC) system ensures that only authorized users have access to student records.
+  </Accordion>
+  <Accordion title="Auditability">
+    Every action taken on the platform is recorded in a tamper-evident log, providing a complete and immutable audit trail.
+  </Accordion>
+</AccordionGroup>
 
-### HIPAA
+## HIPAA
 
 The Health Insurance Portability and Accountability Act (HIPAA) is a federal law that protects the privacy and security of protected health information (PHI). The MindLab platform is HIPAA compliant.
 
--   **End-to-End Encryption:** All PHI is encrypted at rest and in transit.
--   **Strict Access Controls:** Our RBAC system ensures that only authorized users have access to PHI.
--   **Business Associate Agreements (BAAs):** We will sign a BAA with all of our healthcare customers.
+<AccordionGroup>
+  <Accordion title="End-to-End Encryption">
+    All PHI is encrypted at rest and in transit.
+  </Accordion>
+  <Accordion title="Strict Access Controls">
+    Our RBAC system ensures that only authorized users have access to PHI.
+  </Accordion>
+  <Accordion title="Business Associate Agreements (BAAs)">
+    We will sign a BAA with all of our healthcare customers.
+  </Accordion>
+</AccordionGroup>
 
+<Tip>
 We are committed to helping our customers meet their compliance obligations. If you have any specific questions about our compliance program, please do not hesitate to contact us.
+</Tip>
