--- a/security/our-commitment-to-security.mdx
+++ b/security/our-commitment-to-security.mdx
@@ -1,16 +1,15 @@
 ---
 title: "Our Commitment to Security"
-description: "A high-level overview of our security posture."
-icon: "shield-check"
+description: "At MindLab, we are committed to protecting your data and providing you with a secure, resilient platform that you can trust."
 ---
 
 At MindLab, we understand that trust is the foundation of any successful partnership. We are committed to protecting your data and providing you with a secure, resilient platform that you can trust.
 
-### A Culture of Security
+## A Culture of Security
 
 Security is not an afterthought; it is a core tenet of our design philosophy. We have built a culture of security that is reflected in every aspect of our platform, from our code to our operations.
 
-### Key Security Features
+## Key Security Features
 
 <CardGroup cols={2}>
   <Card title="Encryption" icon="lock">
