--- a/use-cases/new-teacher-onboarding.mdx
+++ b/use-cases/new-teacher-onboarding.mdx
@@ -1,17 +1,44 @@
 ---
 title: "Use Case: New Teacher Onboarding"
-description: "A detailed walkthrough of the student dossier use case."
-icon: "user-plus"
+description: "A detailed walkthrough of the student dossier use case, a powerful example of our learning continuity system."
 ---
 
-**The Challenge:** When a student moves to a new class, grade, or teacher, the new instructor has to rebuild their understanding from scratch. This process is time-consuming, inefficient, and can lead to a loss of learning momentum.
+## The Challenge
 
-**The MindLab EDU Solution:** The platform automatically generates a "student dossier" for every student, providing a comprehensive and up-to-date summary of their learning journey.
+When a student moves to a new class, grade, or teacher, the new instructor has to rebuild their understanding from scratch. This process is time-consuming, inefficient, and can lead to a loss of learning momentum.
+
+## The MindLab EDU Solution
+
+The platform automatically generates a "student dossier" for every student, providing a comprehensive and up-to-date summary of their learning journey.
 
 ### The Student Dossier
 
-The student dossier is a living document that is continuously updated by the student's personal AI agent. It provides a holistic view of the student, including their academic performance, learning goals, and any relevant behavioral notes.
+The student dossier is a living document that is continuously updated by the student's personal AI agent. It provides a holistic view of the student, including:
 
-### The Strategic Value
+<AccordionGroup>
+  <Accordion title="Strengths & Weaknesses">
+    A summary of the student's academic strengths and weaknesses, based on their performance data.
+  </Accordion>
+  <Accordion title="Recent Interventions">
+    A log of all the recent interventions that have been taken to support the student's learning.
+  </Accordion>
+  <Accordion title="Learning Goals">
+    A list of the student's current learning goals, as well as their progress towards achieving them.
+  </Accordion>
+  <Accordion title="Behavioral Notes">
+    Any relevant behavioral notes that have been logged by previous teachers.
+  </Accordion>
+  <Accordion title="Curriculum Context">
+    A summary of the curriculum the student has covered, as well as any areas where they may have gaps in their knowledge.
+  </Accordion>
+</AccordionGroup>
 
-With the student dossier, a new teacher can get up to speed on a new student in minutes, not days. This eliminates the guesswork and repeated assessments that are a hallmark of traditional onboarding, and it ensures that every student receives the continuous, personalized support they need to succeed. This is a key part of our commitment to building a true learning continuity system.
+## The Strategic Value
+
+<Check>
+With the student dossier, a new teacher can get up to speed on a new student in minutes, not days.
+</Check>
+
+<Tip>
+This eliminates the guesswork and repeated assessments that are a hallmark of traditional onboarding, and it ensures that every student receives the continuous, personalized support they need to succeed. This is a key part of our commitment to building a true learning continuity system.
+</Tip>
