--- a/for-students/personalized-tutoring.mdx
+++ b/for-students/personalized-tutoring.mdx
@@ -1,25 +1,42 @@
 ---
 title: "Personalized Tutoring"
-description: "A one-on-one tutor that knows you and your curriculum."
-icon: "shapes"
+description: "The MindLab EDU platform provides you with your own personal AI tutor, a sophisticated learning partner that is designed to help you understand and master your course material."
 ---
 
 The MindLab EDU platform provides you with your own personal AI tutor. This is not a generic chatbot; it is a sophisticated learning partner that is designed to help you understand and master your course material.
 
-### A Tutor That Knows You
+## A Tutor That Knows You
 
 Your personal AI tutor is connected to your [Student Agent](/mindlab-edu/personal-ai-agents-with-memory), which means it has a deep understanding of your unique learning journey.
 
--   **It Knows Your History:** It remembers what you’ve struggled with in the past and can provide targeted help where you need it most.
--   **It Knows Your Curriculum:** It is an expert in your course material, and it will always provide explanations and examples that are directly relevant to what you are learning in class.
--   **It Knows Your Learning Style:** As you interact with your tutor, it will learn your preferred ways of learning and adapt its approach to match.
+<AccordionGroup>
+  <Accordion title="It Knows Your History">
+    It remembers what you’ve struggled with in the past and can provide targeted help where you need it most.
+  </Accordion>
+  <Accordion title="It Knows Your Curriculum">
+    It is an expert in your course material, and it will always provide explanations and examples that are directly relevant to what you are learning in class.
+  </Accordion>
+  <Accordion title="It Knows Your Learning Style">
+    As you interact with your tutor, it will learn your preferred ways of learning and adapt its approach to match.
+  </Accordion>
+</AccordionGroup>
 
-### How It Works
+## How It Works
 
-When you are struggling with a concept, you can simply ask your AI tutor for help. It will:
+When you are struggling with a concept, you can simply ask your AI tutor for help.
 
-1.  **Provide a Clear Explanation:** It will explain the concept in a clear, concise way, using language that is easy to understand.
-2.  **Give You Practice:** It will provide you with practice problems and exercises to help you master the material.
-3.  **Check Your Understanding:** It will ask you questions to check your understanding and identify any areas where you might still be confused.
+<Steps>
+  <Step title="Provide a Clear Explanation">
+    It will explain the concept in a clear, concise way, using language that is easy to understand.
+  </Step>
+  <Step title="Give You Practice">
+    It will provide you with practice problems and exercises to help you master the material.
+  </Step>
+  <Step title="Check Your Understanding">
+    It will ask you questions to check your understanding and identify any areas where you might still be confused.
+  </Step>
+</Steps>
 
+<Tip>
 This is the future of learning: a personalized, one-on-one tutor that is available to you 24/7.
+</Tip>
