--- a/roadmap/our-vision.mdx
+++ b/roadmap/our-vision.mdx
@@ -1,19 +1,24 @@
 ---
 title: "Our Vision"
-description: "Our long-term vision to become the modern operating layer for schools."
-icon: "rocket"
+description: "Our long-term vision is to become the modern operating layer for schools, a comprehensive, modular platform that will grow with you over time."
 ---
 
 Our goal is to become the modern operating layer for schools. We are not just building a set of point solutions; we are building a comprehensive, modular platform that will grow with you over time.
 
-### The Journey to a Full School ERP
+## The Journey to a Full School ERP
 
 Our long-term vision is to become a full, modular school ERP that can handle all of your institution's operational needs. We will achieve this vision through a phased approach, layering on new modules and capabilities over time.
 
+<Note>
 Our roadmap is guided by a deep partnership with our customers. We are committed to building the features and capabilities that will have the greatest impact on your institution, and we will be rolling out new modules in the coming months that will continue to expand the power and value of the MindLab EDU platform.
+</Note>
 
-### A Partnership in Innovation
+## A Partnership in Innovation
 
+<Info>
 We are not just building a product; we are building a partnership. We are committed to working closely with our customers to understand their needs and to build a platform that will help them to succeed.
+</Info>
 
+<Tip>
 We are excited about the future of education, and we are proud to be building the platform that will power it.
+</Tip>
