--- a/use-cases/industry/healthcare.mdx
+++ b/use-cases/industry/healthcare.mdx
@@ -4,7 +4,15 @@ description: "A secure, compliant intelligence layer for the healthcare industry
 icon: "briefcase-medical"
 ---
 
-The MindLab platform provides a secure, compliant intelligence layer for the healthcare industry. Our platform is designed to help you to automate repetitive tasks, to streamline your workflows, and to provide real-time support for clinical decision-making.
+The MindLab platform provides a secure, compliant intelligence layer that can automate repetitive tasks, streamline workflows, and provide real-time support for clinical decision-making. Our vision is to free up healthcare professionals to do what they do best: care for patients.
+
+We understand that security and compliance are top priorities in the healthcare industry. That's why our platform is built to meet the strictest security and compliance standards, including HIPAA.
+
+Our platform takes a data-driven approach to healthcare, providing you with the objective insights you need to make more informed decisions.
+
+-   **Clinical Decision Support:** Get real-time support for your clinical decisions.
+-   **Workflow Automation:** Automate repetitive tasks and streamline your workflows.
+-   **Patient Engagement:** Engage your patients in their own care.
 
 ## Agents
 
@@ -24,3 +32,17 @@ The MindLab platform provides a secure, compliant intelligence layer for the hea
 -   **Consent:** The platform is designed to help you to manage patient consent.
 -   **PHI Isolation:** The platform is designed to isolate protected health information (PHI).
 -   **HITL for clinical outputs:** The platform includes human-in-the-loop (HITL) checkpoints for all clinical outputs.
+
+### Before MindLab
+
+-   Clinicians spend hours on administrative tasks and paperwork.
+-   Patients have limited access to information and support.
+-   Workflows are manual and inefficient.
+-   Care is reactive, rather than proactive.
+
+### After MindLab
+
+-   Clinicians are freed up to focus on what they do best: care for patients.
+-   Patients are more engaged in their own care.
+-   Workflows are automated and streamlined.
+-   Care is more proactive and personalized.
