docs: replace 'config over vibes' with 'configuration-first'

--- a/gated-whitepaper/introduction-and-motivation.mdx
+++ b/gated-whitepaper/introduction-and-motivation.mdx
@@ -20,7 +20,7 @@ These shortcomings explain why most AI pilots fail to produce ROI. To deliver du
 MindLab was architected to address these failings. Four principles guide its design:
 
 <CardGroup cols={2}>
-  <Card title="Config over vibes" icon="file-code">
+  <Card title="Configuration-first" icon="file-code">
     AI behavior should be declared in code, not hidden inside prompt text. With CADANCE™, every plan, role, context source, template, policy and runbook is specified and versioned. This makes workflows deterministic, repeatable and auditable.
   </Card>
   <Card title="Runtime Mixture-of-Experts" icon="sitemap">
