--- a/introduction/the-ai-implementation-gap.mdx
+++ b/introduction/the-ai-implementation-gap.mdx
@@ -10,7 +10,7 @@ This failure is not one of technology, but of architecture. Most AI tools are st
 
 MindLab is architected to bridge this gap. Our platform is built on four core design principles:
 
--   **Config over vibes**
+-   **Configuration-first**
 -   **Runtime Mixture-of-Experts**
 -   **Durable memory**
 -   **Audited execution**
