--- a/public-whitepaper/introduction-and-motivation.mdx
+++ b/public-whitepaper/introduction-and-motivation.mdx
@@ -13,7 +13,7 @@ Key limitations of typical AI deployments include:
 
 MindLab was architected to address these failings. Four principles guide its design:
 
--   **Config over vibes**
+-   **Configuration-first**
 -   **Runtime Mixture-of-Experts**
 -   **Durable Memory**
 -   **Audited Execution**
