--- a/whitepaper/cadance-specification.mdx
+++ b/whitepaper/cadance-specification.mdx
@@ -5,7 +5,7 @@ description: "A deep dive into the CADANCE™ Specification, the declarative hea
 
 ## Overview
 
-The core philosophy of the MindLab platform is **"Config over vibes."** We believe that for AI to be a trusted, enterprise-grade asset, its behavior must be deterministic, repeatable, and auditable. This cannot be achieved through prompting alone.
+The core philosophy of the MindLab platform is **"Configuration-first."** We believe that for AI to be a trusted, enterprise-grade asset, its behavior must be deterministic, repeatable, and auditable. This cannot be achieved through prompting alone.
 
 This is why we created the CADANCE™ Spec, a single, versioned specification that declaratively defines the entire lifecycle of an AI-driven workflow. It is a human-readable, machine-executable contract that ensures every action taken by the system is traceable, reproducible, and aligned with your explicit intent.
 
