--- a/whitepaper/executive-summary.mdx
+++ b/whitepaper/executive-summary.mdx
@@ -14,7 +14,7 @@ This failure is not one of technology, but of architecture. Most AI tools are st
 MindLab introduces a runtime mixture-of-experts (MoE) orchestrator governed by CADANCE™—a declarative spec for Plans, Agents, Data, Analysis, Norms, Controls, and Execution. Our platform is built on four core design principles:
 
 <CardGroup cols={2}>
-  <Card title="Config over vibes" icon="file-code">
+  <Card title="Configuration-first" icon="file-code">
     We believe that for AI to be a trusted, enterprise-grade asset, its behavior must be deterministic, repeatable, and auditable.
   </Card>
   <Card title="Runtime MoE" icon="sitemap">
