--- a/whitepaper/introduction-and-motivation.mdx
+++ b/whitepaper/introduction-and-motivation.mdx
@@ -14,7 +14,7 @@ This failure is not one of technology, but of architecture. Most AI tools are st
 MindLab is architected to bridge this gap. Our platform is built on four core design principles:
 
 <CardGroup cols={2}>
-  <Card title="Config over vibes" icon="file-code">
+  <Card title="Configuration-first" icon="file-code">
     We believe that for AI to be a trusted, enterprise-grade asset, its behavior must be deterministic, repeatable, and auditable.
   </Card>
   <Card title="Runtime MoE" icon="sitemap">
